Fix header spacing and ghost row from tasks

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -10,6 +10,7 @@
   border-bottom: 2px solid black;
   height: 75px;
   width: 100%;
+  min-width: 1300px;
 }
 
 p {
